src/objects/grax__GRAX_GroupGDR__c.object
<CustomObject>
    <fields>
        <fullName>grax__Can_Delete_GRAX_Record__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <formula>(
  (grax__GRAX_Schedule_Process__c = null &amp;&amp; grax__Execution_Unique_Key__c != null) ||
  (
    (
      NOT(grax__GRAX_Schedule_Process__r.grax__Is_Running__c) &amp;&amp;
      NOT(ISPICKVAL(grax__GRAX_Schedule_Process__r.grax__Status__c, &apos;Completed - Errors sending data&apos;)) &amp;&amp;
      DATEVALUE(CreatedDate) &lt; TODAY() - 15
    ) ||
    (
      grax__GRAX_Schedule_Process__r.grax__Execution_Unique_Key__c != grax__Execution_Unique_Key__c &amp;&amp;
      NOT(grax__GRAX_Schedule_Process__r.grax__Is_Running__c)
    ) ||
    (
      grax__GRAX_Schedule_Process__r.grax__Can_Delete_GRAX_Records__c &amp;&amp;
      NOT(ISPICKVAL(grax__GRAX_Schedule_Process__r.grax__Status__c, &apos;Completed - Errors sending data&apos;)) &amp;&amp;
      (
        ISPICKVAL(grax__Status__c, &apos;Sent Successful&apos;) ||
        (
          ISPICKVAL(grax__Status__c, &apos;Not Sent&apos;) &amp;&amp;
          NOT(grax__GRAX_Schedule_Process__r.grax__Is_Running__c)
        )
      )
    )
  )
)</formula>
        <label>Can Delete GRAX Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Error_Message__c</fullName>
        <description>Error_Message</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Description of the Error message received</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>grax__Execution_Unique_Key__c</fullName>
        <description>Field Used for Internal Auditing</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__File_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax__GRAX_Schedule_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GRAX Schedule Process</label>
        <referenceTo>grax__GRAX_Schedule_Process__c</referenceTo>
        <relationshipLabel>GRAX Group GDRs</relationshipLabel>
        <relationshipName>GRAX_Group_GDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>grax__Is_Current_Execution_Record__c</fullName>
        <description>Determines if the GRAX Group GDR record belongs to the current Execution Unique Key, on the parent GRAX Schedule Process record</description>
        <formula>NOT(ISBLANK(grax__Execution_Unique_Key__c)) &amp;&amp; grax__GRAX_Schedule_Process__r.grax__Execution_Unique_Key__c == grax__Execution_Unique_Key__c</formula>
        <label>Is Current Execution Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>grax__Last_Sent_Date__c</fullName>
        <description>Last_Sent_Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax__Records__c</fullName>
        <label># Records</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax__Status__c</fullName>
        <description>Status of this related process</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Sent Successful</fullName>
                </value>
                <value>
                    <fullName>Not Processed - Queuable Jobs Full</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>grax__of_Times_Sent__c</fullName>
        <description># of Attempts in sending this record to GRAX</description>
        <label># of Times Sent</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRAX Group GDR</label>
    <nameField>
        <displayFormat>GGDR-{000000}</displayFormat>
        <label>GRAX GroupGDR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Group GDRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>